# obscura

./: AGENTS.md  Cargo.toml  Dockerfile  README.md  obscura-await-promise-report.md  obscura-dom-event-navigation-report.md  obscura-inline-script-click-report.md
.cargo/: config.toml
.github/workflows/: docker.yml  release.yml
crates/obscura-browser/src/: context.rs  lib.rs  page.rs
crates/obscura-cdp/src/: dispatch.rs  lib.rs  server.rs  util.rs
crates/obscura-cdp/src/domains/: dom.rs  domsnapshot.rs  input.rs  lp.rs  mod.rs  page.rs  runtime.rs  target.rs
crates/obscura-cdp/tests/: cdp_click_submit_parity.rs  max_connections_cap.rs  structured_clone_crypto_parity.rs
crates/obscura-cli/: Cargo.toml  build.rs
crates/obscura-cli/src/: main.rs  worker.rs
crates/obscura-cli/tests/: mcp_client.rs
crates/obscura-dom/src/: serialize.rs  tree.rs
crates/obscura-js/js/: bootstrap.js
crates/obscura-js/src/: lib.rs  module_loader.rs  ops.rs  runtime.rs
crates/obscura-mcp/: Cargo.toml
crates/obscura-mcp/src/: http.rs  lib.rs
crates/obscura-net/: Cargo.toml
crates/obscura-net/src/: client.rs  cookies.rs  lib.rs  wreq_client.rs
crates/obscura/src/: page.rs
crates/obscura/tests/: image_shim.rs  interception.rs
docs/: Intercept-and-modify-requests.md  Use-as-a-Rust-library.md
skills/obscura/: SKILL.md
